Upgrade to java 21 (#13)
* Fixed replacement of javaw.exe in batch file

* Upgraded java version to 21, using lombok modern java features where possible

* Some style improvements

* Unnecesary line breaks